<resources>
    <string name="txtLoginTitle">EV Charging App Login</string>
    <string name="txtLogin">Login</string>
    <string name="hntEmail">Email</string>
    <string name="hntPassword">Password</string>
    <string name="txtNoAccount">"Don't have an account? Register"</string>
    <string name="booking_confirmed_message">Booking Confirmed! Scan this QR at the charging station.</string>
    <string name="app_name">EV Charge</string>
    <string name="profile">Profile</string>
    <string name="bookings">My Bookings</string>
    <string name="home">Home</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
</resources>